# starstream-core

./: README.md  pyproject.toml
docs/: architecture.md
examples/: basic -bandwidth-intent  intent_control_plane_mvp.py  scheduler_baselines.py
starstream/: __init__.py
