[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starstream-core"
version = "0.1.0"
description = "Starstream Core: hybrid optical–electronic integration-layer simulation & baseline scheduling."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Starstream", email="info@starstream.io"}]
dependencies = []

[tool.setuptools]
packages = ["starstream"]
